contents/style.css: prevent text selection when toggling dark mode

--- a/contents/style.css
+++ b/contents/style.css
@@ -406,6 +406,7 @@ figure * {
 }
 #dark-mode ~ label {
     cursor: pointer;
+    user-select: none;
 }
 #dark-mode ~ label svg {
     width: var(--unit-size);
